# Pyside-QCP

./: .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.COMMERCIAL  MANIFEST.in  README.md  bindings.h  bindings.xml  build-wheels.sh  build-wheels_36.sh  build-wheels_39.sh  qcustomplot.cpp  qcustomplot.h  qcustomplot.h_2.01.patch  setup.base  setup.cfg  setup.py
.github/workflows/: build_docker.yml  build_linux_wheels.yml  build_linux_wheels_36.yml  build_linux_wheels_39.yml  build_linux_wheels_39_5_15_2.yml  build_linux_wheels_5_15_2.yml  build_qcp_wheels.yml  build_windows_wheels.yml  build_windows_wheels_310.yml  build_windows_wheels_310_5_15_2.yml  build_windows_wheels_38.yml  build_windows_wheels_38_5_15_2.yml  build_windows_wheels_39.yml  build_windows_wheels_39_5_15_2.yml  build_windows_wheels_5_15_2.yml  msbuild.yml
EXAMPLES/: mainwindow.ui  p_textinterface.py  q_advancedaxesdemo.py  q_axis-tags.py  q_barchartdemo.py  q_colormapdemo.py  q_datedemo.py  q_financialdemo.py  q_interactionexample.py  q_itemdemo.py  q_linestyledemo.py  q_logarithmicdemo.py  q_multiaxisdemo.py  q_parametriccurvesdemo.py  q_quadraticdemo.py  q_realtimedatademo.py  q_scatterpixmapdemo.py  q_scatterstyledemo.py  q_scrollbar-axis-range-control.py  q_simpledemo.py  q_simpleitemdemo.py  q_sincscatterdemo.py  q_statisticaldemo.py  q_styleddemo.py  q_text-document-integration.py  q_texturebrushdemo.py  start.bat  start.sh
qcustomplot/: __init__.py
qcustomplot/qcp_examples/: p_textinterface.py  q_advancedaxesdemo.py  q_axis-tags.py  q_barchartdemo.py  q_colormapdemo.py  q_datedemo.py  q_financialdemo.py  q_itemdemo.py  q_multiaxisdemo.py  q_simpledemo.py  q_simpleitemdemo.py  q_statisticaldemo.py  q_styleddemo.py
qcustomplot_examples/: all_demos.py  q_advancedaxesdemo.py  q_axistags.py  q_barchartdemo.py  q_colormapdemo.py  q_datedemo.py  q_financialdemo.py  q_interactionexample.py  q_itemdemo.py  q_linestyledemo.py  q_logarithmicdemo.py  q_multiaxisdemo.py  q_parametriccurvesdemo.py  q_quadraticdemo.py  q_realtimedatademo.py  q_scatterpixmapdemo.py  q_scatterstyledemo.py  q_scrollbar_axis_range_control.py  q_simpledemo.py  q_simpleitemdemo.py  q_sincscatterdemo.py  q_statisticaldemo.py  q_styleddemo.py  q_text_document_integration.py  q_textinterface.py  q_texturebrushdemo.py
qcustomplot_examples_pyside2/: all_demos.py  q_advancedaxesdemo.py  q_axistags.py  q_barchartdemo.py  q_colormapdemo.py  q_datedemo.py  q_financialdemo.py  q_interactionexample.py  q_itemdemo.py  q_linestyledemo.py  q_logarithmicdemo.py  q_multiaxisdemo.py  q_parametriccurvesdemo.py  q_polarplotdemo.py  q_qcpversion.py  q_quadraticdemo.py  q_realtimedatademo.py  q_scatterpixmapdemo.py  q_scatterstyledemo.py  q_scrollbar_axis_range_control.py  q_simpledemo.py  q_simpleitemdemo.py  q_sincscatterdemo.py  q_statisticaldemo.py  q_styleddemo.py  q_text_document_integration.py  q_textinterface.py  q_texturebrushdemo.py  start.bat  start.sh
qcustomplot_pyside2/: __init__.py
src/: bindings.h  bindings.xml  qcustomplot.cpp  qcustomplot.h
unittests/: issue_4_removewidget.py  issue_4_timeplot.py  issue_5_public_members.py
wheels/: qcustomplot-0.15.2-cp310-abi3-manylinux2014_x86_64.whl  qcustomplot-0.15.2-cp310-abi3-win_amd64.whl  qcustomplot-0.15.2-cp36-abi3-manylinux2014_x86_64.whl  qcustomplot-0.15.2-cp37-abi3-manylinux2014_x86_64.whl  qcustomplot-0.15.2-cp38-abi3-manylinux2014_x86_64.whl  qcustomplot-0.15.2-cp38-abi3-win_amd64.whl  qcustomplot-0.15.2-cp39-abi3-manylinux2014_x86_64.whl  qcustomplot-0.15.2-cp39-abi3-win_amd64.whl
